# EngineSimulator

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  EngineLib.cpp  Game.cpp  Game.hpp  TorquePoverCurve.py  imgui.ini  main.cpp
IdealGas/: CMakeLists.txt  Gas.cpp  Gas.hpp  IdealGas.cpp  IdealGas.hpp
Logger/: CMakeLists.txt  FrameRVis.hpp  Logger.cpp  Logger.hpp
Piston/: CMakeLists.txt  Geometry.cpp  Geometry.hpp  Linalg.hpp  Piston.cpp  Piston.hpp  PistonGraphics.cpp  PistonGraphics.hpp
Solver/: CMakeLists.txt  Solver.cpp  Solver.hpp
